  o Removed explicit support for master installation model.  The same affect
    can be achieved with --prefix.
  o Its no longer a requirement to use --enabled-shared with Tcl & Tk to use it
    with TclX.
===============================================================================
 2 May 96: Released TclX 7.5.0 patch 1
===============================================================================
 4 May 96:
  o Fix bug where manual pages were not installed.
-------------------------------------------------------------------------------
 6 May 96:
  o Fixed lindex and lrange indexing out of bounds memory when negative indexes
    are used.
-------------------------------------------------------------------------------
 8 May 96:
  o Even more changes to deal with the runtime library search path correctly
    on Solaris and others.
  o Fixed problems when Tcl/Tk is built with --srcdir.
===============================================================================
10 May 96: Released TclX 7.5.1
===============================================================================
18 May 96:
  o Fixed problem in initialization code that caused Tk send.test to hang.
-------------------------------------------------------------------------------
23 May 96:
  o Fixed bug that caused panic when doing a copyfile to/from a file that is 
    open read/write.
===============================================================================
15 Jun 96: Released TclX 7.5.2
===============================================================================
 6 Jul 96:
  o Fixed bug in loading ITcl tclIndex files.
-------------------------------------------------------------------------------
27 Jul 96:
  o Major work on the Win32 port has been included.
===============================================================================
27 Jul 96: Released TclX 7.5.3 - alpha 1 (Win32 alpha release)
===============================================================================