@@ -1187,3 +1187,7 @@
 ===============================================================================
 27 Jul 96: Released TclX 7.5.3 - alpha 1 (Win32 alpha release)
 ===============================================================================
+ 8 Aug 96:
+  o The runtime no installs under /usr/local/lib/{tclX,tkX} by default.
+    (Hi Don).
+-------------------------------------------------------------------------------
